--- a/index.html
+++ b/index.html
@@ -1,75 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rachel Mondragon – Contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rachel Mondragon | Iron Dragon Advisors</title>
+
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: #0b1f3a;
-      color: #ffffff;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+    :root {
+      --navy: #0b1f3a;
+      --navy-dark: #081629;
+      --gold: #d4af37;
+      --gold-soft: #e6c766;
+      --text: #ffffff;
+      --muted: rgba(255,255,255,0.75);
+      --card-bg: rgba(11,31,58,0.92);
     }
+
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: radial-gradient(circle at top, #122b4d, var(--navy-dark));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 24px;
+      color: var(--text);
+    }
+
     .card {
-      background: #122b4d;
-      padding: 32px;
-      border-radius: 16px;
       max-width: 420px;
       width: 100%;
+      background: var(--card-bg);
+      border-radius: 20px;
+      padding: 28px 24px 26px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.55);
+      border: 1px solid rgba(212,175,55,0.25);
       text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
     }
-    h1 {
-      margin: 0 0 8px;
-      font-size: 26px;
+
+    .logo {
+      width: 120px;
+      margin: 0 auto 18px;
     }
-    h2 {
-      margin: 0 0 20px;
-      font-size: 16px;
-      font-weight: normal;
-      opacity: 0.9;
-    }
-    a.button {
+
+    .logo img {
+      width: 100%;
+      height: auto;
       display: block;
-      background: #1e90ff;
-      color: #ffffff;
-      text-decoration: none;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin: 0;
+      letter-spacing: 0.3px;
+    }
+
+    .title {
+      margin-top: 6px;
+      font-size: 15px;
+      color: var(--muted);
+    }
+
+    .company {
+      margin-top: 4px;
+      font-size: 15px;
+      color: var(--gold-soft);
+      letter-spacing: 0.4px;
+    }
+
+    .divider {
+      height: 1px;
+      background: linear-gradient(to right, transparent, var(--gold), transparent);
+      margin: 22px 0;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
       padding: 16px;
-      border-radius: 10px;
       font-size: 18px;
-      font-weight: 600;
-      margin: 24px 0;
+      font-weight: 700;
+      border-radius: 14px;
+      text-decoration: none;
+      color: var(--navy-dark);
+      background: linear-gradient(135deg, var(--gold), var(--gold-soft));
+      box-shadow: 0 6px 20px rgba(212,175,55,0.35);
     }
-    a.button:hover {
-      background: #1c7ed6;
+
+    .btn:active {
+      transform: translateY(1px);
     }
+
     .footer {
+      margin-top: 18px;
       font-size: 12px;
-      opacity: 0.7;
-      margin-top: 20px;
+      color: rgba(255,255,255,0.65);
       line-height: 1.4;
     }
   </style>
 </head>
+
 <body>
   <div class="card">
-    <h1>Rachel Mondragon</h1>
-    <h2>Founder & Principal Advisor<br>Iron Dragon Advisors LLC</h2>
+    <div class="logo">
+      <img src="IDA_logo.png" alt="Iron Dragon Advisors logo">
+    </div>
 
-    <a class="button" href="Rachel-Mondragon.vcf">
+    <h1>Rachel Mondragon</h1>
+    <div class="title">Founder</div>
+    <div class="company">Iron Dragon Advisors</div>
+
+    <div class="divider"></div>
+
+    <!-- IMPORTANT: filename must match your vCard exactly -->
+    <a class="btn" href="Rachel-Mondragon.vcf">
       Save Contact
     </a>
 
     <div class="footer">
-      This page contains contact information only and does not constitute
-      legal, financial, or compliance advice.
+      Scan · Tap “Save Contact” · Add to Contacts<br>
+      This page provides contact information only.
     </div>
   </div>
 </body>
 </html>
+
