--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       --navy: #0b1f3a;
       --navy-dark: #081629;
       --gold: #d4af37;
-      --gold-soft: #e6c766;
+      --gold-soft: #f0d27a;
       --text: #ffffff;
       --muted: rgba(255,255,255,0.75);
-      --card-bg: rgba(11,31,58,0.92);
+      --card-bg: rgba(11,31,58,0.94);
     }
 
     * { box-sizing: border-box; }
@@ -22,7 +22,8 @@
       margin: 0;
       min-height: 100vh;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: radial-gradient(circle at top, #122b4d, var(--navy-dark));
+      background:
+        radial-gradient(circle at top, #162f52, var(--navy-dark));
       display: flex;
       align-items: center;
       justify-content: center;
@@ -31,19 +32,23 @@
     }
 
     .card {
-      max-width: 420px;
+      max-width: 440px;
       width: 100%;
       background: var(--card-bg);
-      border-radius: 20px;
-      padding: 28px 24px 26px;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.55);
-      border: 1px solid rgba(212,175,55,0.25);
+      border-radius: 22px;
+      padding: 34px 26px 30px;
+      box-shadow: 0 25px 70px rgba(0,0,0,0.6);
+      border: 1px solid rgba(212,175,55,0.35);
       text-align: center;
     }
 
     .logo {
-      width: 120px;
+      width: 150px;
       margin: 0 auto 18px;
+      padding: 14px;
+      border-radius: 22px;
+      background: radial-gradient(circle, rgba(212,175,55,0.25), transparent 70%);
+      box-shadow: 0 0 35px rgba(212,175,55,0.35);
     }
 
     .logo img {
@@ -53,9 +58,17 @@
     }
 
     h1 {
-      font-size: 24px;
-      margin: 0;
-      letter-spacing: 0.3px;
+      font-size: 26px;
+      margin: 6px 0 4px;
+      letter-spacing: 0.4px;
+    }
+
+    .company {
+      font-size: 20px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      color: var(--gold-soft);
+      margin-top: 6px;
     }
 
     .title {
@@ -64,40 +77,52 @@
       color: var(--muted);
     }
 
-    .company {
-      margin-top: 4px;
-      font-size: 15px;
-      color: var(--gold-soft);
-      letter-spacing: 0.4px;
-    }
-
     .divider {
-      height: 1px;
-      background: linear-gradient(to right, transparent, var(--gold), transparent);
-      margin: 22px 0;
+      height: 2px;
+      width: 120px;
+      margin: 22px auto 26px;
+      background: linear-gradient(
+        to right,
+        transparent,
+        var(--gold),
+        transparent
+      );
+      box-shadow: 0 0 12px rgba(212,175,55,0.7);
+      border-radius: 2px;
     }
 
     .btn {
       display: block;
       width: 100%;
-      padding: 16px;
+      padding: 17px;
       font-size: 18px;
       font-weight: 700;
-      border-radius: 14px;
+      border-radius: 16px;
       text-decoration: none;
       color: var(--navy-dark);
       background: linear-gradient(135deg, var(--gold), var(--gold-soft));
-      box-shadow: 0 6px 20px rgba(212,175,55,0.35);
+      box-shadow: 0 8px 26px rgba(212,175,55,0.45);
     }
 
     .btn:active {
       transform: translateY(1px);
     }
 
-    .footer {
+    .website {
       margin-top: 18px;
+      font-size: 14px;
+    }
+
+    .website a {
+      color: var(--gold-soft);
+      text-decoration: none;
+      border-bottom: 1px dashed rgba(240,210,122,0.6);
+    }
+
+    .footer {
+      margin-top: 22px;
       font-size: 12px;
-      color: rgba(255,255,255,0.65);
+      color: rgba(255,255,255,0.6);
       line-height: 1.4;
     }
   </style>
@@ -110,21 +135,24 @@
     </div>
 
     <h1>Rachel Mondragon</h1>
+    <div class="company">IRON DRAGON ADVISORS</div>
     <div class="title">Founder</div>
-    <div class="company">Iron Dragon Advisors</div>
 
     <div class="divider"></div>
 
-    <!-- IMPORTANT: filename must match your vCard exactly -->
     <a class="btn" href="Rachel-Mondragon.vcf">
       Save Contact
     </a>
 
+    <div class="website">
+      <a href="https://www.iron-dragon-adv.com" target="_blank" rel="noopener">
+        www.iron-dragon-adv.com
+      </a>
+    </div>
+
     <div class="footer">
-      Scan · Tap “Save Contact” · Add to Contacts<br>
-      This page provides contact information only.
+      Scan · Tap “Save Contact” · Add to Contacts
     </div>
   </div>
 </body>
 </html>
-
